fix(blog): better align for sub form

--- a/blog.mergify.io/style.css
+++ b/blog.mergify.io/style.css
@@ -43,9 +43,11 @@ body {
     background: var(--ghost-accent-color);
     padding-top: 3em;
     padding-bottom: 3em;
+    text-align: center;
 }
 
 #mc_embed_signup label {
+    display: block;
     font-size: 2.5em;
     margin-bottom: 1em;
 }
